<resources>
    <string name="app_name">Paritta</string>

    <string name="dedicatedto">\'Paritta\' is dedicated for: My Mom and Dad</string>
    <string name="dad">Liem Thiam Gwan</string>
    <string name="mom">Nyoo Thiam Hwa</string>
    <string name="hope">Mohon doa supaya dibebaskan dari segala karma buruk.</string>

    <string name="a1_Title">心 命 詩</string>
    <string name="a1_Judul">SIN MING SHE</string>
    <string name="a2_Title">淨 天 地 神 咒</string>
    <string name="a2_Judul">CING THIEN TI SHEN COU</string>
    <string name="a3_Title">廣 濟 庭 訓</string>
    <string name="a3_Judul">KUANG CI THING SÜN</string>
    <string name="a4_Title">道 之 宗 旨</string>
    <string name="a4_Judul">TAO CE CONG CE</string>
    <string name="a5_Title">摩 訶 般 若 波 羅 蜜 多 心 經</string>
    <string name="a5_Judul">MO HE PO JE PHO LUO MI TUO SIN CING</string>
    <string name="a6_Title">彌 勒 救 苦 真 經</string>
    <string name="a6_Judul">MI LE CIOU KHU CEN CING</string>
    <string name="a7_Title">禮運大同篇</string>
    <string name="a7_Judul">LI YÜN TA THONG PHIEN</string>
    <string name="a8_Title">朱子治家格言</string>
    <string name="a8_Judul">CU CE CE CIA KE YEN</string>
    <string name="a9_Title">大學</string>
    <string name="a9_Judul">TA SÜE</string>
    <string name="a10_Title">中 庸</string>
    <string name="a10_Judul">CONG YONG</string>
    <string name="a11_Title">清 靜 經</string>
    <string name="a11_Judul">CHING CING CING</string>
    <string name="a12_Title">白 水 老 人 百 孝 經</string>
    <string name="a12_Judul">PAI SHUEI LAO JEN PAI SIAO CING</string>
    <string name="a13_Title">諸 葛 亮 誡 子 書</string>
    <string name="a13_Judul">CU KE LIANG CIE CE SHU</string>
    <string name="a14_Title">弟 子 規</string>
    <string name="a14_Judul">TI CE KUEI</string>

    <string name="story_title">Makna Kitab Suci “Mi Le Cen Cing”</string>
    <string name="story_content">
\tKitab suci yang disabdakan oleh Buddha Maitreya ini adalah demi menolong benih-benih Buddha yang berjodoh pada masa akhir jaman ini, agar
dapat membina dan beramal jasa sehingga dapat terbebas dari lautan penderitaan dalam kehidupan ini.

\n\n
\tKedatangan Buddha Maitreya bukanlah hal yang biasa, bukan hanya diharapkan oleh manusia saja, tetapi para Buddha dan malaikat juga
menantikannya.

\n\n
\tMaha Guru Agung (Cing Kong Cu She) mendapatkan Mustika Dharma Sejati di daerah Shantung. Mustika Dharma Sejati yaitu suatu petunjuk sejati
seperti yang diturunkan oleh Sang Buddha Sakyamuni pada jaman dahulu di pertemuan “Ling Shan”. Dharma Sejati ini merupakan Dharma tingkat tertinggi,
sehingga menyadari membina yang sejati untuk mencapai KeBuddhaan.

\n\n
\tKemudian Bapak Guru Agung (Thien Jan Ku Fo) melanjutkan Firman Tuhan dengan mengembangkan Ajaran KeTuhanan yang dimulai dari Thien
Cing, di kediaman “3 Bintang” dan wafat mencapai kesempurnaan di daerah Wang Thao propinsi Se Chuan.

\n\n
\tBapak Guru Agung Thien Jan dan Ibu Guru Suci Hui Ming mendapat titah Tuhan pada masa akhir jaman ini untuk menyelamatkan umat manusia. Siapa
yang ingin terselamatkan haruslah terlebih dahulu memohon Jalan KeTuhanan. Dan tiba pada saatnya nanti akan memimpin para malaikat untuk
menggenapi misi penyelamatan akhir ini.

\n\n
\tPada saat itu, kilat menggeletar-geletar di “Tengah Sari” kemudian semakin tampaklah keagungan Jalan KeTuhanan sehingga para siluman dan setan pun
gentar serta tidak tentram.

\n\n
\tIbunda Tuhan YME memberikan firman pada Cong Hua Sheng Mu, salah satu dari tiga Buddha yang mendapatkan misi merampungkan penyelamatan
akhir ini. (Selain itu ada penitisan dari Buddha Maitreya yaitu Maha Guru Agung Cing Kong dan penitisan dari Buddha Ci Kung yaitu Bapak Guru Agung
Thien Jan).

\n\n
\tPada saatnya tiba, barulah akan terbukti bahwa Ajaran Sejati Sang Buddha Maitreya adalah Dharma tingkat tertinggi.
Tuhan Yang Maha Esa berwelas asih menurunkan “Benang Emas” dan berbagai kemujizatan penyelamatan akhir jaman akan dimulai dan terjadi dari
belahan timur.

\n\n
\tKemudian Ajaran KeTuhanan akan berkembang ke berbagai belahan dunia, baik utara maupun selatan dan bila tiba pada saatnya akan disatukan
kembali.

\n\n
\tSebelum adanya langit dan bumi, rohani suci berkumpul bersama dengan Tuhan Yang Maha Esa. Setelah adanya langit, bumi dan terlahir sebagai
manusia, roh suci bersemayam pada “Pintu Suci”.
\n\n

\tTuhan Maha Pengasih mengutus Guru Sejati menurunkan Jalan KeTuhanan dengan membuka Pintu Suci rohani dan memberikan Pertanda
Suci stempel KeBuddhaan.

\n\n
\tBenih-benih Buddha jika ingin kembali ke Nirwana, setelah mendapatkan Tiga Mustika dari Guru Sejati, haruslah berpegang teguh pada Ajaran
KeTuhanan, dengan baik-baik membina diri dan menjalankan sesuai ajaran kitab sejati ini.

\n\n
\tDengan demikian berarti tidak menyia-nyiakan kewelas asihan Tuhan YME menurunkan benang emas dan pertolongan Buddha Maitreya. Sehingga
nantinya akan mampu melewati berbagai ujian maupun rintangan, dan akhirnya terbebas dari tumimbal lahir mencapai tingkat KeBuddhaan.

\n\n
\tDi akhir jaman, akan bermunculan berbagai ajaran dan agama baru. Haruslah dengan kearifan mengenali Sang Buddha Sejati yang mendapatkan
Firman Tuhan Sang Guru Sejati, yang diutus memberikan petunjuk sejati sehingga kembali menyadari untuk memupuk kebajikan rohani suci.

\n\n
\tSetiap saat menjaga ketulusan hati dan menjalankan Ajaran Buddha Maitreya (Jalan KeTuhanan) dengan membina dan beramal jasa maka dengan
sendirinya dapat menghalau bencana dan malapetaka.

\n\n
\tJika ingin mencapai 9 tingkat teratai KeBuddhaan haruslah dengan tulus berpegang teguh pada Ajaran KeTuhanan Sejati, dengan membina kebajikan diri dan beramal jasa pahala, sehingga kearifan semakin cemerlang.

\n\n
\tJangan terpengaruh oleh perkataan yang meluluhkan hati kepercayaan. Senantiasa waspada dan menjaga hati diri dari siasat, ketamakan dan niat yang tidak baik.

\n\n
\tTuhan Yang Maha Esa menurunkan Doa Suci. Bila sepenuh hati menghayati dan mengamalkan maka akan memahami segala sesuatu dan
mempunyai naluri yang peka.

\n\n
\tPara dewa dan malaikat pun menitis terlahir ke dunia. Bodhisatva dari 5 penjuru pun menitis ke dunia turut serta menjalankan misi penyelamatan akhir.

\n\n
\tPara Kepala Malaikat Akhirat memeriksa, menghapus dan mencatatkan nama pemohon Jalan KeTuhanan pada Buddha San Kuan Ta Ti. Semua perbuatan, baik amal jasa maupun dosa, rohani kita sendiri dan Buddha Pengawaslah yang paling tahu serta akan dicatat dengan seksama.

\n\n
\t3 Buddha “San Kuan Ta Ti” berwelas asih mendaftar nama pemohon Jalan KeTuhanan, mencatat kebaikan dan keburukan perbuatan mereka.

\n\n
\tTuhan Maha Pengasih memberi kesempatan kepada para pembina untuk bertobat dan memperbaharui diri, menyelesaikan ikrar dan beramal jasa untuk menebus dosa serta kesalahan.

\n\n
\tPara Buddha “Thien Cun” datang menyelamatkan umat manusia. Juga mengangkat para dewa dan malaikat alam Surga untuk bersama-sama membantu menjalankan Jalan KeTuhanan.

\n\n
\t8 Buddha “Cin Kang” datang melindungi penyebaran Jalan KeTuhanan dan 4 Bodhisatva pun datang menolong umat manusia, juga memimpin 36 malaikat “Yen Ciang” membantu Jalan KeTuhanan. Selain itu, 500 dewa “Ling Kuan” juga ikut serta datang melindungi dan membantu Buddha Maitreya
menyelesaikan misi penyelamatan umum sehingga nantinya dapat menghadiri pertemuan “Lung Hua” untuk menentukan tingkat KeBuddhaan. Di samping itu, juga membantu para pembina dalam menghadapi malapetaka dan bencana akhir jaman sehingga dapat lolos dengan selamat.

\n\n
\t“Chen Wu Ta Ti” di akhir jaman yang kacau balau ini sebagai panglimanya. Walau berwibawa tapi hati sangat berwelas asih dan ramah-tamah dalam memikul tugas akhir jaman.

\n\n
\tMengibarkan bendera hitam sehingga matahari dan bulan pun tertutupi (bencana akhir jaman, gelap gulita selama 49 hari). Memakai topi perang yang gagah, dengan pancaran sinar 7 bintang Utara.

\n\n
\t“Wei Cheng” dari Utara sebagai panglima utama. Menumpas habis para siluman, iblis dan orang jahat.

\n\n
\tMenolong para pembina melewati bencana sehingga petaka dan bencana pun sirna bagai debu yang berterbangan.

\n\n
\tRaja Naga Laut dari 4 penjuru pun datang membantu Jalan KeTuhanan. Masing-masing menaiki awan menuju angkasa dan melindungi para pembina.

\n\n
\tPrajurit Langit dari 10 penjuru pun datang melindungi dan membantu Buddha Maitreya menggenapi misi penyelamatan terhadap benih-benih Buddha.

\n\n
\tBuddha Sakyamuni yang menerima Firman Tuhan pada masa Pancaran Merah sudah menyelesaikan misinya. Sekarang telah beralih ke masa Pancaran ke-3 (Pancaran Putih) di bawah pimpinan Sang Buddha Maitreya.

\n\n
\tTuhan Yang Maha Esa menurunkan sabda kepada Buddha Maitreya, para Buddha, Bodhisatva dan malaikat untuk menitis kembali ke dunia guna “Menarik Kembali” semua ajaran kembali ke Jalan Esa.

\n\n
\tSang Buddha Maitreya datang ke dunia, dengan Firman Tuhan memberikan Doa Suci. Juga menurunkan kitab “Ta Cang Cing” untuk masa yang akan datang.

\n\n
\tPara pembina Jalan KeTuhanan senantiasa membaca, menghayati dan mengamalkan Doa Suci dan Kitab Sang Buddha Maitreya, maka iblis dan siluman pun tidak berani datang mendekat.

\n\n
\tMembaca sekali (sungguh hati menghayati dan berpegang teguh pada ajaran kitab suci) akan mempunyai kesadaran batin dan iman yang kokoh.

\n\n
\tMembaca kedua kali (dapat terus mempertahankan kesungguhan hati, menghayati dan mengamalkan ajaran kitab suci dalam pembinaan) dapat mencapai tingkat KeBuddhaan.

\n\n
\tMembaca ketiga kali (setiap saat selalu mawas diri, mempertahankan ketulusan, membina dengan sesungguhnya dan beramal jasa) para malaikat dan hantu pun menghormati.

\n\n
\tPara roh jahat dan siluman pun tidak berani mendekat dan mengganggu, semuanya akan sirna bagaikan debu yang tersapu angin.

\n\n
\tPara pembina haruslah berhati-hati di akhir jaman yang penuh dengan ajaran-ajaran sesat. Temukan dan kenalilah Jalan KeTuhanan Sejati. Sesudah mendapat Doa dan Kitab Sejati Buddha Maitreya, maka pertahankan hati kepercayaan, tekad hati janganlah mundur, bina dan genapilah kebajikan diri dengan beramal jasa pahala sehingga mencapai tingkat KeBuddhaan, bertemu kembali dengan Ibunda Tuhan YME di Nirwana.

\n\n
Terpujilah Sang Buddha Maitreya (Nan Wu Thien Yen Thai Pao A Mi Thuo Fo – salah satu gelar KeBuddhaan Buddha Maitreya).
\n\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
