<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp" >

    <TextView
        android:id="@+id/owm_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:gravity="center|clip_horizontal"
        android:text="@string/a2_Title"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/owm_p"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:gravity="center|clip_horizontal"
        android:text="@string/a2_Judul" />
    <TextView
        android:id="@+id/meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:textColor="@color/colorAccent"
        android:text="@string/a1_Judul" />
</LinearLayout>