<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/twm_s1_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center|clip_horizontal"
            android:text="@string/a2_Title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/twm_s2_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center|clip_horizontal"
            android:text="@string/a2_Title"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/twm_s1_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:gravity="center|clip_horizontal"
            android:text="@string/a2_Judul" />

        <TextView
            android:id="@+id/twm_s2_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:gravity="center|clip_horizontal"
            android:text="@string/a2_Judul" />
    </LinearLayout>

    <TextView
        android:id="@+id/twm_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/a1_Judul"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic" />
</LinearLayout>